# worMS-Agent

./: Dockerfile  README.md  agent.py  bot.py  compose.yaml  conftest.py  debug.py  main.py  marine_agent.py  model.py  pyproject.toml  requirements.txt  run_sample.json  test_marine_agent.py  worms_agent.py  worms_agent_server.py  worms_api.py  worms_client.py  worms_models.py
src/: WoRMsValidation.py  Wormslogging.py  agent.py  inspect_langsmith.py  logging.py  main.py  orcinus_orca_worms_data.json  test.py  tools.py  worms_api.py
src/scripts/: create_dataset.py  evaluators.py  run_evaluation.py
tests/: conftest.py  test_agent.py  test_marine_agent.py
